- Display all available room from API in a GridLayout with MVVM structure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
 
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
+
+    <string name="content_description">Image</string>
 </resources>
