--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,16 @@
     <string name="comment">Comment</string>
     <string name="share">Share</string>
 
+    <string name="room_name_hint">Give this room an interesting name</string>
+
     <string name="content_description">Image</string>
+
+    <string name="take_photo">Take Photo</string>
+    <string name="choose_photo_from_album">Choose from Album</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="create">CREATE</string>
+    <string name="delete">Delete</string>
+
+    <string name="delete_this_photo">Delete this photo?</string>
 </resources>
