Create Post Functionality - Create Post UI - Make VolleyMultipartRequest helper method - Solve the problem of back button cant go back to previous fragment - Create Post API call

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,8 @@
 
     <string name="create">CREATE</string>
     <string name="delete">Delete</string>
+    <string name="post">POST</string>
 
     <string name="delete_this_photo">Delete this photo?</string>
+    <string name="crete_post_hint">What\'s in your mind?</string>
 </resources>
