--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,10 @@
 
     <string name="delete_this_photo">Delete this photo?</string>
     <string name="crete_post_hint">What\'s in your mind?</string>
+
+    <string name="forgot_password">Forgot password?</string>
+    <string name="reset_password">Reset password</string>
+    <string name="reset_password_instruction">Enter email address of your account</string>
+    <string name="your_email">Your email</string>
+    <string name="reset_password_button">Send a password reset link</string>
 </resources>
