- Now user have an option to use Phone Number to reset their password. - PhoneAuthFragment know whether navigate from Login or ForgotPassword,   so after verify success know where to proceed - Update navigation graph for easier navigation (Remove nested graph for   login and reset password graph)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="email_not_registered">Email is not registered</string>
     <string name="unknown_error">Unknown error</string>
     <string name="password_reset_email_sent">Password reset email sent! Please check your email.</string>
+    <string name="use_phone_to_reset_password">Use phone number instead?</string>
 </resources>
