Now can reset password after verify phone number from Firebase. Sign up and reset password click back to Login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,12 @@
     <string name="unknown_error">Unknown error</string>
     <string name="password_reset_email_sent">Password reset email sent! Please check your email.</string>
     <string name="use_phone_to_reset_password">Use phone number instead?</string>
+
+    <string name="set_new_password">Set your new password</string>
+    <string name="new_password">New password</string>
+    <string name="confirm_new_password">Confirm new password</string>
+    <string name="confirm">Confirm</string>
+
+    <string name="successfully_reset_password">Successfully reset password</string>
+    <string name="failed_reset_password">Failed to reset password.Try again later</string>
 </resources>
