Firebase Notification Now Successful receive notification when someone add a comment   - To the post you create   - To the post you comment before   - Play sound when notification receive   - Store Firebase token when get the new token to server   - Now only send 1 type of notification which is Text only notification   - Set up the notification helper for easier expand for different type of notification if needed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,9 @@
     <string name="phone_number_not_registered">Phone number not existed.Please enter the correct phone number</string>
     <string name="try_again">Try again</string>
     <string name="login_instead">Login instead?</string>
+
+    <string name="default_notification_channel_id">DISCOUNT AND DEALS</string>
+    <string name="discussion_channel">Discussion You Join</string>
+    <string name="fcm_message">FCM TESTING</string>
+
 </resources>
