Notification UI - Notification Fragment,adapter,recyclerView - Notification badge in MainFragment increment when need notification come in - Persist received notification in Android Room - Delete clicked notification in Room - Update all UI when notification deleted from Room - Clicked on a notification go to SinglePost with postID

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="discussion_channel">Discussion You Join</string>
     <string name="fcm_message">FCM TESTING</string>
 
+    <string name="notification">Notification</string>
+
 </resources>
