--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,6 @@
     <string name="empty_state_single_post">Oops! Post Not found</string>
     <string name="empty_state_room">Wow! Is empty.</string>
 
+    <string name="unhide">Unhide</string>
+
 </resources>
