DisplayRoomFragment UI for blocked room - If a room already block,show the UI tell the user - Display a unhide button,so the user can unhide the room,then fetch back the content for him

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,5 +103,6 @@
     <string name="empty_state_room">Wow! Is empty.</string>
 
     <string name="unhide">Unhide</string>
+    <string name="unblock_room">Unblock Room</string>
 
 </resources>
