--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,6 @@
     <string name="unhide">Unhide</string>
     <string name="unblock_room">Unblock Room</string>
 
+    <string name="more_content_description">More Button</string>
+
 </resources>
