UI of SinglePostFragment after hide a post,comment or block a user - Remove the comment that hided from the recyclerView in SinglePostFragment - Remove comment that created by blocked user from recyclerView - Present progressBar when calling API to block the comment or user - Present empty state when successfully hided the post

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,4 +110,8 @@
     <string name="hide">Hide</string>
     <string name="report">Report</string>
 
+    <string name="post_success_hide">Post already hided</string>
+    <string name="user_success_block">User already block</string>
+    <string name="user_success_report">Successfully report user</string>
+
 </resources>
