MainFragment after hide post,block user,report user,have an option to undo the exclusion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,4 +114,6 @@
     <string name="user_success_block">User already block</string>
     <string name="user_success_report">Successfully report user</string>
 
+    <string name="undo">Undo</string>
+
 </resources>
