DisplayRoom UI - Same like SinglePostFragment - If the 1st fetch the room,the Room is hide or the Room owner user is blocked,   then show empty state - Have an option to unhide or unblock user on empty state - After unhide,then fetch all the post from the Room again - DisplayRoomFragment have a menu option to hide room or block the room owner user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,7 +104,7 @@
     <string name="empty_state_room">Wow! Is empty.</string>
 
     <string name="unhide">Unhide</string>
-    <string name="unblock_room">Unblock Room</string>
+    <string name="unblock_room">Unblock</string>
 
     <string name="block_user">Block user</string>
     <string name="hide">Hide</string>
