--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">UpUpHere Android</string>
+    <string name="app_name">UpUpHere</string>
     <string name="logo">Logo</string>
 
     <string name="login_hint">Email/Username/Phone Number</string>
@@ -42,6 +42,7 @@
 
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
+    <string name="feedback">Feedback</string>
 
     <string name="up_vote">UpVote</string>
     <string name="comment">Comment</string>
