--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,6 +88,9 @@
     <string name="verify_phone_number_reason">In order to avoid spam and give you the best service,please confirm your identity</string>
     <string name="forgot_password_instruction">Enter phone number of your account</string>
     <string name="continue_process">Continue</string>
+    <string name="proceed_to_sign_up">Proceed to Sign Up</string>
+    <string name="phone_number_verify_success">Successfully verify your phone number</string>
+    <string name="continue_to_reset_password">Continue to Reset password</string>
     <string name="phone_number_registered">Phone number already registered.Login instead?</string>
     <string name="phone_number_not_registered">Phone number not existed.Please enter the correct phone number</string>
     <string name="try_again">Try again</string>
