--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
     <string name="app_name">UpUpHere</string>
     <string name="logo">Logo</string>
 
-    <string name="login_hint">Email/Username/Phone Number</string>
+    <string name="login_hint">Email or Username</string>
     <string name="password_hint">Enter your password</string>
     <string name="login_button_text">Login</string>
-    <string name="direct_to_sign_up">Don\'t have account? Create account for Free</string>
+    <string name="direct_to_sign_up">Don\'t have account? Create one for Free</string>
 
     <string name="phone_number_hint">Enter your Phone Number</string>
     <string name="OTP_hint">Enter 6-digit number</string>
@@ -51,6 +51,7 @@
     <string name="room_name_hint">Give this room an interesting name</string>
 
     <string name="content_description">Image</string>
+    <string name="content_description_end_icon">Edit text icon</string>
     <string name="more_content_description">More Button</string>
 
     <string name="take_photo">Take Photo</string>
