--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,6 @@
     <string name="privacy_policy">Privacy Policy</string>
     <string name="agree_continue">Agree &amp; Continue</string>
 
+    <string name="unable_to_process_now">Unable to sign up now.Please try again later. If this keep happening,please screenshot this and send to feedback@upuphere.com</string>
+
 </resources>
