--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,4 +143,7 @@
 
     <string name="unable_to_process_now">Unable to sign up now.Please try again later. If this keep happening,please screenshot this and send to feedback@upuphere.com</string>
 
+    <string name="admob_app_id">ca-app-pub-3213513925256606~8735366142</string>
+    <string name="admob_test_ads">ca-app-pub-3940256099942544/2247696110</string>
+
 </resources>
