--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,5 +145,6 @@
 
     <string name="admob_app_id">ca-app-pub-3213513925256606~8735366142</string>
     <string name="admob_test_ads">ca-app-pub-3940256099942544/2247696110</string>
-
+    <string name="admob_post_fragment_native_ads">ca-app-pub-3213513925256606/5424089326</string>
+    <string name="admob_room_fragment_native_ads">ca-app-pub-3213513925256606/8245500265</string>
 </resources>
